# dcsctp

./: .gitignore  AGENTS.md  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md  build.rs  clippy.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
cxx/: build.rs
cxx/examples/pingpong/: Makefile  main.cc
cxx/src/: lib.rs
dcsctp-cxx/: Cargo.toml  Makefile  build.rs
dcsctp-cxx/examples/: main.cpp
dcsctp-cxx/include/: dcsctp.h
dcsctp-cxx/src/: lib.cpp  lib.rs
examples/pingpong/: Makefile  main.cc
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_outstanding_data.rs  parse_error_causes.rs  parse_packet.rs  parse_parameters.rs
src/: events.rs  ffi.rs  lib.rs  timer.rs  types.rs
src/api/: handover.rs  mod.rs
src/fuzzer/: fuzz_outstanding_data.rs  mod.rs
src/packet/: abort_chunk.rs  chunk.rs  chunk_validators.rs  cookie_ack_chunk.rs  cookie_echo_chunk.rs  cookie_received_while_shutting_down.rs  crc32c.rs  data.rs  data_chunk.rs  error_causes.rs  error_chunk.rs  forward_tsn_chunk.rs  forward_tsn_supported_parameter.rs  heartbeat_ack_chunk.rs  heartbeat_info_parameter.rs  heartbeat_request_chunk.rs  idata_chunk.rs  iforward_tsn_chunk.rs  incoming_ssn_reset_request_parameter.rs  init_ack_chunk.rs  init_chunk.rs  missing_mandatory_parameter_error_cause.rs  mod.rs  no_user_data_error_cause.rs  outgoing_ssn_reset_request_parameter.rs  parameter.rs  protocol_violation_error_cause.rs  re_config_chunk.rs  reconfiguration_response_parameter.rs  sack_chunk.rs  sctp_packet.rs  shutdown_ack_chunk.rs  shutdown_chunk.rs  shutdown_complete_chunk.rs  state_cookie_parameter.rs  supported_extensions_parameter.rs  unknown_chunk.rs  unknown_parameter.rs  unrecognized_chunk_error_cause.rs  user_initiated_abort_error_cause.rs  (+1 more)
src/rx/: data_tracker.rs  interleaved_reassembly_streams.rs  mod.rs  reassembly_queue.rs  reassembly_streams.rs  traditional_reassembly_streams.rs
src/socket/: capabilities.rs  connect.rs  context.rs  data.rs  heartbeat.rs  mod.rs  shutdown.rs  socket_tests.rs  state.rs  state_cookie.rs  stream_reset.rs  transmission_control_block.rs
src/testing/: data_generator.rs  data_sequencer.rs  event_helpers.rs  mod.rs
src/tx/: mod.rs  outstanding_data.rs  retransmission_queue.rs  retransmission_timeout.rs  send_queue.rs  stream_scheduler.rs
