[workspace]
members = [".", "fuzz"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/webrtc/dcsctp"

[workspace.dependencies]
anyhow = "1.0.100"
crc-any = "2.5.0"
cxx = "1.0.192"
cxx-build = "1.0.192"
dcsctp = { path = "." }
itertools = "0.14.0"
libfuzzer-sys = "0.4.10"
log = "0.4.29"
rand = "0.9.2"
thiserror = "2.0.17"

[workspace.lints.rust]
dead-code = "allow"
unused-macros = "allow"
rust-2018-idioms = "deny"
rust-2024-compatibility = "deny"
# These should be manually migrated once we bump the edition.
edition-2024-expr-fragment-specifier = "allow"
unsafe-code = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = {level = "deny", priority = -1}
cargo = {level = "deny", priority = -1}
unnecessary_semicolon = "warn"
explicit_iter_loop = "warn"
semicolon_if_nothing_returned = "warn"
from_iter_instead_of_collect = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"

[package]
name = "dcsctp"
description = "An SCTP implementation for WebRTC Data Channels"
keywords = ["webrtc", "sctp"]
categories = ["network-programming"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
crc-any = { workspace = true }
cxx = { workspace = true, optional = true }
log = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
cxx-build = { workspace = true, optional = true }

[dev-dependencies]
itertools = { workspace = true }

[lints]
workspace = true

[features]
cxx = ["dep:cxx", "dep:cxx-build"]
fuzz-internals = []

[lib]
crate-type = ["lib", "staticlib"]
