[workspace]
members = [".", "fuzz"]

[workspace.package]
version = "0.1.10"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/webrtc/dcsctp"

[workspace.dependencies]
cxx = "1.0"
cxx-build = "1.0"
dcsctp = { path = "." }
fastrand = "2.3"
itertools = "0.14"
libfuzzer-sys = "0.4"
log = "0.4"
thiserror = "2.0"

[workspace.lints.rust]
dead-code = "allow"
unused-macros = "allow"
rust-2018-idioms = "deny"
rust-2024-compatibility = "deny"
# These should be manually migrated once we bump the edition.
edition-2024-expr-fragment-specifier = "allow"
unsafe-code = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = {level = "deny", priority = -1}
cargo = {level = "deny", priority = -1}
unnecessary_semicolon = "warn"
explicit_iter_loop = "warn"
semicolon_if_nothing_returned = "warn"
from_iter_instead_of_collect = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"

[package]
name = "dcsctp"
description = "An SCTP implementation for WebRTC Data Channels"
keywords = ["webrtc", "sctp"]
categories = ["network-programming"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
cxx = { workspace = true, optional = true }
fastrand = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
cxx-build = { workspace = true, optional = true }

[dev-dependencies]
itertools = { workspace = true }

[lints]
workspace = true

[features]
cxx = ["dep:cxx", "dep:cxx-build"]
fuzz-internals = []

[lib]
crate-type = ["lib", "staticlib"]
