[package]
name = "dcsctp-fuzz"
version = "0.0.0"
publish = false
edition = { workspace = true }
metadata = { cargo-fuzz = true }

[dependencies]
dcsctp = { workspace = true, features = ["fuzz-internals"] }
libfuzzer-sys = { workspace = true }

[[bin]]
name = "parse_parameters"
path = "fuzz_targets/parse_parameters.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_error_causes"
path = "fuzz_targets/parse_error_causes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_packet"
path = "fuzz_targets/parse_packet.rs"
test = false
doc = false
bench = false
